Fixing Algolia style issues
Highlighting and snippets were messed up in the switch
from algoliasearch-jekyll to jekyll-algolia.

--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -82,7 +82,7 @@ figcaption {
 }
 
 /* Style for Algolia highlighted search results. */
-.algolia__result-highlight {
+.ais-Highlight {
     background-color: yellow;
 }
 
